<resources>
    <string name="app_name">HealthFitApplication</string>
    <string name="_1_water">+1 Glass</string>
    <string name="_0">0</string>
    <string name="you_drank_these_many_liters_of_water">Glasses of water today</string>
    <string name="pose1"> Step 1:- Start in the push-up position with your arms completely straight and directly beneath your shoulders.\n\n
 Step 2:- Your body should form a straight line from your shoulders to your ankles. \n\n
 Step 3:- Squeeze your abs, lift one foot off the floor and bring your knee up towards your chest while keeping your body in as straight of a line as possible. \n\n
 Step 4:- Return to the starting position and repeat the movement with your opposite leg.. </string>
    <string name="pose2"> Step 1:- Lie flat on your mat with knees bent and feet on the mat. Hands at the base of your head and elbows pointed out.\n\n
 Step 2:- Using your abdominals bring your head and shoulders off the mat and come up into a crunch, then lower with control. </string>
    <string name="pose3"> Step 1:- This movement is performed with a bench and a foot stool.\n\n
 Step 2:- Place a bench behind yourself and rest on it with your hands. Place your legs straight out in front of you. You may also place them at an elevated level as shown above.\n\n
 Step 3:- Begin with arms in a fully. Slowly bend at your elbows keeping the rest of your body straight. Be sure to keep your elbows back and close together.\n\n
 Step 4:- Dip down until your arms form a 90 degree angle and you feel a stretch in the triceps.\n\n
 Step 5:- Slowly extend your arms raising your body back up. Pause and contract your triceps muscles at the top. Pause and repeat the movement.</string>
    <string name="pose4"> Step 1:- Lie flat on the floor with your lower back pressed to the ground (pull your navel in to also target your deep abs). \n\n
 Step 2:- Put your hands behind your head, then bring your knees in towards your Chest and lift your shoulder blades off the ground, but be sure not to pull on your neck.\n\n
 Step 3:-Straighten your right leg out to about a 4S-degree angle to the ground while turning your upper body to the left, bringing your right elbow towards the left knee.\n\n
 Step 4:- Make sure your rib cage is moving and hotjust your elbows. Now switch sides and do the same motion on the other side to complete onerep. </string>
    <string name="pose5"> Step 1:- Lay down with your hands to your sides for support. \n\n
 Step 2:- Raise your legs so they are off the ground, keeping the abdominals tight.\n\n
 Step 3:- Slowly raise your legs 90 degrees, contracting the abdominal muscles. Slowly return to starting position. Do not touch the floor with your feet.\n\n</string>
    <string name="pose6"> Step 1:- Lie on your back on an exercise mat. With your arms straight at your sides, bend your knees and place your feet flat on the floor between18 and 24 inches apart.\n\n
 Step 2:- Breathing out, crunch your ab slightly upward and sideways to the right a couple of inches until your right hand touches your right heel.\n\n
 Step 3:- Hold brief|y and then return to your starting position while inhaling. Repeat on the left side. </string>
    <string name="pose7"> Step 1:- You can perform straight-leg crunches by lying face up on the floor with your legs straight and then moving your upper body as you would for a standard bent-knee crunch.\n\n
 Step 2:- Alternatively, lie on your back, raise your legs so they are perpendicular to the floor and then perform the standard crunching motion with your torso.</string>
    <string name="pose8"> Step 1:- Lie down on the floor placing your feet either under something that Will not move or by having a partner hold them. Your legs should be bent at the kneesPlace your hands behind your head and lock them together by claspihg your fingers. This is the starting position.\n\n
 Step 2:- Elevate your upper body so that it creates an imaginary V-shape with your thighs. Breathe out when performing this part of the exercise.\n\n
 Step 3:- Once you feel the contraction for a second, lower your upper body back down to the starting position while inhahng. \n\n
 Step 4:- Repeat for the recommended amount of repetitions.</string>
    <string name="pose9"> Step 1:- Lying on the back,lift stright leg,extend opposite hand to touch toe. \n\n
 Step 2:- Please,return,alternate inhale down,exhale up at toe touch.</string>
    <string name="pose10"> Step 1:- High Plank position then slowly rotate your torso to the side raising your arm till it gets ihlihe with the other one. \n\n
 Step 2:- Then return to the initial position. </string>
    <string name="pose11"> Step 1:- Lie on the floor with elbows directly beneath your shoulders and legs fully extended.\n\n
 Step 2:- Raise your torso into the air until it makes a straight line from your shoulders to your ankles. Tighten your stomach, squeeze your butt.</string>
    <string name="pose12"> Step 1:- Lie down on the floor placing your feet either under something that will not move or by having a partner hold them. Your legs should be bent at the knees. Elevate your upper body so that it creates an imaginary V-shape with your thighs. \n\n
 Step 2:- Your arms should be fully extended in front of you perpendicular to your torso and with the hands clasped. This is the starting position.\n\n
 Step 3:- This is the starting position. Twist your torso to the right side until your arms are parallel with the floor while breathing out. \n\n
 Step 4:- Hold the contraction for a second and move back to the starting position while breathing out. Now move to the opposite side performing the same techniques you applied to the right side. Repeat for the recommended amount of repetitions. </string>
    <string name="pose13"> Step 1:- Lie on your back with your knees bent, feet flat and hip width. \n\n
 Step 2:- Lower your pelvis 2 inches from the floor. Squeeze your glutes and lift your pelvis back to bridge position. </string>
    <string name="pose14"> Step 1:- Lie facedown on the floor with your arms extended in front of you and your leg extended behind you. \n\n
 Step 2:- In one movement,engage your glutes and lower back to raise your arms,legs,and chest off the floor.\n\n
 Step 3:- Hold for a count,then slowly return to the starting position. </string>
    <string name="pose15"> Step 1:- Stand, extend arms 90° to sides, bend forward 90° at waist.\n\n
 Step 2:- Looking at the floor, rotate torso to touch hand to foot, rotate for other hand. \n\n
 Step 3:- Head will follow chest action. </string>
    <string name="workout1">Mountain Climber</string>
    <string name="workout2">Basic Crunches</string>
    <string name="workout3">Bench Dips</string>
    <string name="workout4">Bicycle Crunches</string>
    <string name="workout5">Leg Raise</string>
    <string name="workout6">Alternative Heel Touch</string>
    <string name="workout7">Leg up Crunches</string>
    <string name="workout8">Sit Up</string>
    <string name="workout9">Alternative V UPS</string>
    <string name="workout10">Planks</string>
    <string name="workout11">Planks with Leg Lift</string>
    <string name="workout12">Russian Twist</string>
    <string name="workout13">Bridge</string>
    <string name="workout14">Vertical Leg Crunches</string>
    <string name="workout15">Wind Mill</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logoout</string>

    <string name="menu_home">Home</string>
    <string name="menu_run">Step Tracker</string>
    <string name="menu_water">Water Tracker</string>
    <string name="menu_workout">Workouts</string>
    <string name="menu_bmi">BMI Calculator</string>
    <string name="menu_theme">Change Theme</string>
</resources>