<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_BMI"
            android:icon="@drawable/calculator"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/run_vec"
            android:title="@string/menu_run" />
        <item
            android:id="@+id/nav_water"
            android:icon="@drawable/water_svg"
            android:title="@string/menu_water" />
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/workout"
            android:title="@string/menu_workout" />
    </group>
</menu>